Removed old Integer constructor